--- a/mwindow.html
+++ b/mwindow.html
@@ -609,7 +609,7 @@
       crossorigin="anonymous"
     ></script>
     <script>
-      window.$ = window.jQuery = require("jquery");
+      window.$ = window.jQuery = require('jquery');
     </script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
