--- a/mwindow.html
+++ b/mwindow.html
@@ -576,9 +576,9 @@
         <div class="footercontrol">
           <div
             class="mx-auto currentuserfooter text-center"
-            title="arıca@zaxe.com"
+            title="kaya@zaxe.com"
           >
-            arıca@zaxe.com
+            kaya@zaxe.com
           </div>
 
           <div class="users d-flex float-right">
