--- a/static/mwindow.html
+++ b/static/mwindow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -83,7 +83,7 @@
   <body
     class="body"
     id="body"
-    onload="load()"
+    onload="domLoad()"
     style="background-color: transparent"
   >
     <div id="root" class="root mx-auto">
