--- a/static/mwindow.html
+++ b/static/mwindow.html
@@ -83,7 +83,7 @@
   <body
     class="body"
     id="body"
-    onload="domLoad()"
+    onload="load()"
     style="background-color: transparent"
   >
     <div id="root" class="root mx-auto">
@@ -601,7 +601,7 @@
       </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="./scripts.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
