--- a/static/mwindow.html
+++ b/static/mwindow.html
@@ -34,7 +34,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
-<body class="body" id="body" style="background-color: transparent">
+<body class="body" id="body" onload="load()" style="background-color: transparent">
   <div id="root" class="root mx-auto">
     <div class="loader-wrapper mx-auto" id="loader-wrapper">
       <span class="loader"><span class="loader-inner"></span></span>
@@ -327,7 +327,7 @@
     </div>
   </div>
 
-  <script src="../static/scripts.js"></script>
+  <script src="./scripts.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
