--- a/static/mwindow.html
+++ b/static/mwindow.html
@@ -34,7 +34,7 @@
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 </head>
 
-<body class="body" id="body" onload="load()" style="background-color: transparent">
+<body class="body" id="body" style="background-color: transparent">
   <div id="root" class="root mx-auto">
     <div class="loader-wrapper mx-auto" id="loader-wrapper">
       <span class="loader"><span class="loader-inner"></span></span>
@@ -332,6 +332,7 @@
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
+
   <script>
     window.$ = window.jQuery = require('jquery');
   </script>
